--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
     "react-redux": "^9.2.0",
+    "redux-thunk": "^3.1.0",
     "vite": "^6.0.5",
     "vite-plugin-eslint": "^1.8.1"
   }
